<resources>
    <string name="app_name">RICOH Live Streaming Client Sample</string>
    <string name="bidir_activity_name">Bidirectional Sample</string>
    <string name="recv_activity_name">Receiver Sample</string>
    <string name="file_sender_activity_name">File Sender Sample</string>
    <string name="uvc_camera_activity_name">UVC Camera Sample</string>
    <string name="screen_share_activity_name">Screen Share Sample</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="pick_file">Pick File</string>
    <string name="guide_save">Some items have not been saved.</string>
    <string name="save_config">Save</string>
    <string name="room_id">RoomID</string>
    <string name="log_level">LogLevel</string>
    <string name="room_id_is_empty">Room ID is empty.</string>
    <string name="room_id_has_been_changed">Room ID has been changed. Are you sure to continue without saving?</string>
    <string name="room_type">RoomType</string>
    <string name="sfu">SFU</string>
    <string name="sfu_large">SFU_Large</string>
    <string name="p2p">P2P</string>
    <string name="p2p_turn">P2P+Turn</string>
    <string name="update_connection_meta">Update connection meta</string>
    <string name="update_track_meta">Update track meta</string>
    <string name="mute_type">MuteType</string>
    <string name="soft_mute">softmute</string>
    <string name="hard_mute">hardmute</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="mute">mute</string>
    <string name="unmute">unmute</string>
    <string name="ice_servers_protocol">IceServersProtocol</string>
    <string name="all">ALL</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="tls">TLS</string>
    <string name="running">Running</string>
    <string name="video_receive">Video Receive</string>
    <string name="video_send_bitrate">Video Send Bitrate:</string>
    <string name="video_send_bitrate_unit">kbps</string>
    <string name="video_send_framerate">Video Send Framerate:</string>
    <string name="video_send_framerate_unit">fps</string>
    <string name="mode">Mode</string>
    <string name="use_proxy">Use Proxy</string>
    <string name="proxy_address">Address</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_authentication">Authentication</string>
    <string name="proxy_user">User</string>
    <string name="proxy_password">Password</string>
    <string name="address_placeholder">Please enter address</string>
    <string name="port_placeholder">Please enter port</string>
    <string name="user_placeholder">Please enter username</string>
    <string name="password_placeholder">Please enter password</string>
    <string name="sendreceive">SendReceive</string>
    <string name="sendonly">SendOnly</string>
    <string name="receiveonly">ReceiveOnly</string>
    <string name="roomid">RoomId</string>
    <string name="camera_setting">Camera setting</string>
    <string name="zero">(0)</string>
    <string name="auto">Auto</string>
    <string name="disabled">Disabled</string>
    <string name="freq_50hz">50Hz</string>
    <string name="freq_60hz">60Hz</string>
    <string name="pu_backlight_compensation">Backlight Compensation</string>
    <string name="pu_brightness">Brightness</string>
    <string name="pu_contrast">Contrast</string>
    <string name="pu_saturation">Saturation</string>
    <string name="pu_sharpness">Sharpness</string>
    <string name="pu_gamma">Gamma</string>
    <string name="pu_gain">Gain</string>
    <string name="pu_hue">Hue</string>
    <string name="pu_whitebalancetemparature">White Balance</string>
    <string name="pu_powerlinefrequency">Anti-Flicker</string>
    <string name="ct_zoom">Zoom</string>
    <string name="ct_focus">Focus</string>
    <string name="close">Close</string>
    <string name="rst_default">Reset to Default</string>
    <string name="control_value">(%1$d)</string>
    <string name="value_readonly">(RO)</string>
    <string name="value_invisible">(Inv)</string>
    <string name="value_auto">(Auto)</string>
    <string name="pause_video">Pause Video</string>
    <string name="resume_video">Resume Video</string>
</resources>
