<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_bidir_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bidir_activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_recv_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recv_activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_bidir_activity" />

    <Button
        android:id="@+id/start_file_sender_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_sender_activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_recv_activity" />

    <Button
        android:id="@+id/start_uvc_camera_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uvc_camera_activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_file_sender_activity" />

    <Button
        android:id="@+id/start_screen_share_camera_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_share_activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_uvc_camera_activity" />

    <!-- Guidance -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_uvc_camera_activity">

        <TextView
            android:id="@+id/guide_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_config"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Room ID -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_room_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_guide">

        <TextView
            android:id="@+id/text_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/room_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_room_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Log Level -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_log_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_room_id">

        <TextView
            android:id="@+id/text_log_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_level"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/log_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:entries="@array/spinner_log_level"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@id/text_log_level"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Room Type -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_room_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_log_level">

        <TextView
            android:id="@+id/text_room_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/room_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@id/text_room_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ICE Servers Protocol -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_ice_servers_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_room_type">

        <TextView
            android:id="@+id/ice_servers_protocol_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice_servers_protocol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/ice_servers_protocol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@id/ice_servers_protocol_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
